# Flappy-bird

./: CMakeLists.txt  Flappy1.cpp
